docs/v8.5/packages_api/runtime/templatesrv.md
+++
# -----------------------------------------------------------------------
# Do not edit this file. It is automatically generated by API Documenter.
# -----------------------------------------------------------------------
title = "TemplateSrv"
keywords = ["grafana","documentation","sdk","@grafana/runtime"]
type = "docs"
disable_edit_link = true
+++

## TemplateSrv interface

Via the TemplateSrv consumers get access to all the available template variables that can be used within the current active dashboard.

For a more in-depth description visit: https://grafana.com/docs/grafana/v8.5/reference/templating

<b>Signature</b>

```typescript
export interface TemplateSrv 
```
<b>Import</b>

```typescript
import { TemplateSrv } from '@grafana/runtime';
```
<b>Methods</b>

|  Method | Description |
|  --- | --- |
|  [containsTemplate(target)](#containstemplate-method) | Checks if a target contains template variables. |
|  [getVariables()](#getvariables-method) | List the dashboard variables |
|  [replace(target, scopedVars, format)](#replace-method) | Replace the values within the target string. See also  |
|  [updateTimeRange(timeRange)](#updatetimerange-method) | Update the current time range to be used when interpolating \_\_from / \_\_to variables. |

### containsTemplate method

Checks if a target contains template variables.

<b>Signature</b>

```typescript
containsTemplate(target?: string): boolean;
```
<b>Parameters</b>

|  Parameter | Type | Description |
|  --- | --- | --- |
|  target | <code>string</code> |  |

<b>Returns:</b>

`boolean`

### getVariables method

List the dashboard variables

<b>Signature</b>

```typescript
getVariables(): VariableModel[];
```
<b>Returns:</b>

`VariableModel[]`

### replace method

Replace the values within the target string. See also 

<b>Signature</b>

```typescript
replace(target?: string, scopedVars?: ScopedVars, format?: string | Function): string;
```
<b>Parameters</b>

|  Parameter | Type | Description |
|  --- | --- | --- |
|  target | <code>string</code> |  |
|  scopedVars | <code>ScopedVars</code> |  |
|  format | <code>string &#124; Function</code> |  |

<b>Returns:</b>

`string`

### updateTimeRange method

Update the current time range to be used when interpolating \_\_from / \_\_to variables.

<b>Signature</b>

```typescript
updateTimeRange(timeRange: TimeRange): void;
```
<b>Parameters</b>

|  Parameter | Type | Description |
|  --- | --- | --- |
|  timeRange | <code>TimeRange</code> |  |

<b>Returns:</b>

`void`

